# FrankocoinCore

./: .gitignore  Cargo.toml  readme.md  test.html
blockchain/: Cargo.toml
blockchain/merkle_tree/src/: merkle_proof.rs
blockchain/merkle_tree/tests/: test.rs
blockchain/src/: lib.rs
blockchain/src/blocks/: mod.rs  transaction.rs
blockchain/tests/: test.rs
merkle_tree/: Cargo.toml
merkle_tree/src/: lib.rs  merkle_proof.rs
merkle_tree/tests/: test.rs
src/: header.rs  main.rs  server.rs  test.rs  threadpool.rs
src/blocks/: mod.rs  transaction.rs
src/frankolang/: codeSegment.rs  instructions.rs  mod.rs  payments.rs
src/frankolang/codeSegment/: instructions.rs  mod.rs
src/frankolang/code_segment/: instructions.rs  mod.rs
src/server/: mod.rs  threadpool.rs
src/tests/: blocks.rs  frankolangInterpreter.rs  frankolangInterpreterTest.rs  frankolang_interpreter.rs  mod.rs  server.rs
