[package]
name = "Frankocoin-Core"
version = "0.1.0"
authors = ["McFranko <mrelfranko@disroot.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ed25519-dalek = { git = "https://github.com/mcfranko/ed25519-dalek" }
rand = "0.7.3"
