[package]
name = "Frankocoin-Core"
version = "0.1.0"
authors = ["McFranko <mrelfranko@disroot.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
md5 = "0.7.0"
sha2 = "0.9.1"
ed25519-dalek = { git = "https://github.com/McFranko/ed25519-dalek" }
rand = "0.7.3"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.1"
dirs = "3.0.1"

