[package]
name = "frankocoin_core"
version = "0.1.0"
authors = ["McFranko <mrelfranko@disroot.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
md-5 = "0.9.1"
sha2 = "0.9.1"
rand = "0.7.3"
serde = { version = "1.0.118", features = ["derive"] }
typetag = "0.1.6"
bincode = "1.3.1"
dirs = "3.0.1"
merkle_tree = { path = "merkle_tree", features = ["serde_support"] }
ed25519-dalek = "1.0.1"
lazy_static = "1.4.0"
