[package]
name = "blockchain"
version = "0.1.0"
authors = ["Fronkles McFranko <mrelfranko@disroot.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
merkle_tree = { path = "merkle_tree", features = ["serde_support"] }
serde = { version = "1.0.118", features = ["derive"] }
bincode = "1.3.1"
ed25519-dalek = "1.0.1"
sha2 = "0.9.1"
